# CPP_Python_module_simple_examples

./: .gitignore  README.md
cmake/: FindNvshmem.cmake  FindTorch.cmake
cmake_module/: CMakeLists.txt  mymath.c  setup.py  test.py
nvshmem_module/: CMakeLists.txt  README.md  nvshmem_init.cu  test_nvshmem.py
pybind_class_module/: cpp_class.cpp  py_class.py  test.py
pybind_cudaClass_module/: README.md  my_cpp_class.cu  my_py_class.py  setup.py  test.py
pybind_cuda_module/: README.md  hello.cpp  hello_cuda.cu  setup.py  test.py  test_2gpu.py
pybind_hello_module/: README.md  hello.cpp  setup.py
pybind_mpi_module/: README.md  mpi_util.cu  setup.py  test_mpi.py
pybind_nvshmem_module/: Makefile  nvshmem_test.cu  nvshmem_util.cu  setup.py  test_nvshm.py
torch_cmake_module/: CMakeLists.txt  test.py
torch_custom_ops/: CMakeLists.txt  README.md  op.cpp
torch_hello_module/: README.md  hello.cpp  setup.py
torch_tensorlist_module/: README.md  setup.py  tensorlist.cu
